# MatrixPlay2_RPi

./: CMakeLists.txt  README.md  config.json  pom.xml  restore_src_backup.sh  run.sh
jni/: piomatter_abi.h  piomatter_backend.cpp
piomatter-local/: build_lib.sh  run_x.sh
piomatter-local/help/: install.md
piomatter-local/jni/: piomatter_jni.c
piomatter-local/src/main/java/com/Pong/: Main.java
piomatter-local/src/main/java/com/demos/: DemoAnim.java
piomatter-local/src/main/java/com/piomatter/: PioMatter.java  UtilsFPS.java
src/main/java/com/demos/: DemoAnim.java  DemoIETI.java
src/main/java/com/piomatter/: UtilsImage.java
src/main/java/com/project/client/: Main.java  UtilsWS.java
src/main/java/com/project/server/: ClientRegistry.java  Main.java
